--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "expo": "~49.0.13",
+    "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "^0.72.5",
+    "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "expo-image-picker": "~14.3.2"
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
