--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/geolocation": "^3.1.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "expo": "~49.0.13",
     "expo-image-picker": "~14.3.2",
+    "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "^0.72.5",
+    "react-native": "0.72.6",
     "react-native-fs": "^2.16.6",
-    "react-native-gesture-handler": "^2.14.0",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0"
