--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "axios": "^1.6.2",
     "expo": "~49.0.13",
     "expo-camera": "^13.6.0",
     "expo-image-picker": "~14.3.2",
     "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.72.6",
     "react-native-fs": "^2.16.6",
     "react-native-geolocation-service": "^5.3.1",
