--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "expo-media-library": "~15.4.1",
+    "expo-file-system": "~15.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
