--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "axios": "^1.6.2",
     "expo": "~49.0.13",
     "expo-camera": "^13.6.0",
+    "expo-file-system": "~15.4.5",
     "expo-image-picker": "~14.3.2",
     "expo-location": "~16.1.0",
+    "expo-media-library": "~15.4.1",
     "expo-status-bar": "~1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,8 +32,7 @@
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "expo-media-library": "~15.4.1",
-    "expo-file-system": "~15.4.5"
+    "react-native-uuid": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
