--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.24.4",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/geolocation": "^3.1.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
@@ -23,6 +24,8 @@
     "expo-location": "~16.1.0",
     "expo-media-library": "~15.4.1",
     "expo-status-bar": "~1.6.0",
+    "jest": "^29.2.1",
+    "jest-expo": "~49.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.6",
@@ -35,7 +38,10 @@
     "react-native-uuid": "^2.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.24.4",
+    "@testing-library/react-native": "^12.4.5",
+    "eslint-plugin-testing-library": "^6.2.2",
+    "mock-async-storage": "^2.2.0"
   },
   "private": true
 }
